--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "prettier": "^2.7.1"
     },
     "scripts": {
-        "prettier": "prettier \"./**/*.{yml,js,md,json}\"",
-        "lint:fix": "yarn prettier --write",
-        "lint:check": "yarn prettier --check"
+        "prettier": "prettier '.'",
+        "lint:fix": "npm run prettier -- --write",
+        "lint:check": "npm run prettier -- --check"
     }
 }
