--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,7 +4,7 @@ on:
     pull_request:
     push:
         branches:
-            - master
+            - main
 
 env:
 
@@ -12,17 +12,10 @@ jobs:
     lint:
         name: Lint code
         runs-on: ubuntu-latest
-        steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3.5.1
               with:
-                  node-version: ${{ env.NODE_VERSION }}
-            - id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
-            - uses: actions/cache@v3.0.11
-              with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: ${{ runner.os }}-yarn-
-            - run: yarn --frozen-lockfile
-            - run: yarn lint:check
+                node-version-file: .nvmrc
+                cache: npm
+                cache-dependency-path: package-lock.json
+            - run: npm run lint:check
