--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,21 +1,20 @@
 name: Automated tests
 
 on:
-    pull_request:
+    pull_request: {}
     push:
         branches:
             - main
-
-env:
 
 jobs:
     lint:
         name: Lint code
         runs-on: ubuntu-latest
+        steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3.5.1
               with:
-                node-version-file: .nvmrc
-                cache: npm
-                cache-dependency-path: package-lock.json
+                  node-version-file: .nvmrc
+                  cache: npm
+                  cache-dependency-path: package-lock.json
             - run: npm run lint:check
